--- a/assignment 1_version3.ipynb
+++ b/assignment 1_version3.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,34 +53,34 @@
    "outputs": [],
    "source": [
     "#Method and process\n",
-    "    #created columns \"Sales\" and \"Month\n",
-    "    #Filled in the null cells in \"Price\" column with the average price by \"Product\"\n",
-    "    #using scatter plot and box plot to look at the data distribution\n",
-    "    #dropped duplicates\n",
-    "    #dropped outlier with sales  greater than 10,000\n",
+    "    # -created columns \"Sales\" and \"Month\n",
+    "    # -Filled in the null cells in \"Price\" column with the average price by \"Product\"\n",
+    "    # -using scatter plot and box plot to look at the data distribution\n",
+    "    # -dropped duplicates\n",
+    "    # -dropped outlier with sales  greater than 10,000\n",
     "\n",
     "#Analyzed \n",
-    "    #- sales by month\n",
-    "    #- sales by product\n",
-    "    #- sales by region\n",
-    "    #- Sales by Price & Region\n",
-    "    #- Sales by region with lines by product\n",
+    "    # - sales by month\n",
+    "    # - sales by product\n",
+    "    # - sales by region\n",
+    "    # - Sales by Price & Region\n",
+    "    # - Sales by region with lines by product\n",
     "\n",
     "#conclustion. \n",
     "\n",
-    "    #-March, July, October and December have higher sales  &  Feburaty, May and September have the lowest sales\n",
+    "    # -March, July, October and December have higher sales  &  Feburaty, May and September have the lowest sales\n",
     "\n",
-    "    #-top 5 region is Region 10,4,5,8,9 & the least sale regions are Region 1,3,6,7,and those without regions identified. \n",
+    "    # -top 5 region is Region 10,4,5,8,9 & the least sale regions are Region 1,3,6,7,and those without regions identified. \n",
     "\n",
-    "    #- top 10 products are : Product 14,23,26,29,31,35,41,48,50 and thoese products without identified. \n",
+    "    # -top 10 products are : Product 14,23,26,29,31,35,41,48,50 and thoese products without identified. \n",
     "\n",
     "\n",
     "#Recomendation \n",
     "\n",
-    "    #-promotion & marketing campagins aiming sales in March, July, October and December \n",
-    "    #-Promotion & marketing campagins and resouces are more reallocated  on Region 10,4,5,8,9. \n",
+    "    # -promotion & marketing campagins aiming sales in March, July, October and December \n",
+    "    # -Promotion & marketing campagins and resouces are more reallocated  on Region 10,4,5,8,9. \n",
     "\n",
-    "    #-Promotion & marketing campagins and resouces are reallocated by product and region\n",
+    "    # -Promotion & marketing campagins and resouces are reallocated by product and region\n",
     "    #\t* Region 10 ,products: other,14, 29, 8,13\n",
     "    #\t* Region 4, products: 14,13,31,16,50\n",
     "    #\t* Region 5, products: others, 29,37,6,10\n",
