--- a/summary.ipynb
+++ b/summary.ipynb
@@ -134,13 +134,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Skewness & Kurtosis\n",
     "\n",
@@ -192,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# fillin, drop & outlier\n",
     "df['age'].fillna(df['age'].median(), inplace=True) # missing value\n",
     "df.drop_duplicates(inplace=True) # drop duplicated\n",
     "df.duplicated()\n",
@@ -202,14 +195,6 @@
     "fare_mean = df['fare'].mean()\n",
     "fare_std = df['fare'].std()\n",
     "df = df[(df['fare'] >= fare_mean - 3 * fare_std) & (titanic['fare'] <= fare_mean + 3 * fare_std)]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Hypothesis test"
    ]
   },
   {
