--- a/summary.ipynb
+++ b/summary.ipynb
@@ -220,9 +220,61 @@
     "H, pval = stats.kruskal(df1, df2, df3)\n",
     "print('The Test statistic: ', H)\n",
     "print('The p_value of the test: ', pval) # 注意，这里print时与其它 不一样\n",
-    "\n",
-    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Experimenntation\n",
+    "\n",
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "\n",
+    "Step1- terationDataclearning\n",
+    "\n",
+    "step2 - users are similar in behaviour = no significant differences between variablws.\n",
+    "use statistic test to support our analysis \n",
+    "p_val = stats.f_oneway(df1,df2,df3) # use ANONA test  betwen 3 groups by variables\n",
+    "\n",
+    "step3 - Experiment Design\n",
+    "select subsets of users\n",
+    "    np.sample()\n",
+    "    or variant1 = df.iloc[0：300]\n",
+    "        variant2 = df.iloc[300:600]\n",
+    "        control =df.iloc[600:]\n",
+    "    create new column to add the variant identifier\n",
+    "        variant1['variant'] = 'variant1'\n",
+    "        variant2['variant'] = 'variant2'\n",
+    "        control['variant'] = 'control'\n",
+    "    concatenate all 3 data sets\n",
+    "        final_dataset = pd.concat([variant1, variant2, control], axis=0)\n",
+    "        \n",
+    "step4: Analyzing experiment results---ANOVA test\n",
+    "    var1 = results[results['Variant']=='Variant 1']['Post_Test_Avg_Spend']\n",
+    "    var2 = results[results['Variant']=='Variant 2']['Post_Test_Avg_Spend']\n",
+    "    control = results[results['Variant']=='Control']['Post_Test_Avg_Spend']\n",
+    "\n",
+    "    p_val = stats.f_oneway(var1, var2, control)\n",
+    "    print(p_val)\n",
+    "    \n",
+    "step4: Analyzing experiment results---Independent t-test for each variant \n",
+    "     var2 = results[results['Variant']=='Variant 2']['Post_Test_Avg_Spend']\n",
+    "    control = results[results['Variant']=='Control']['Post_Test_Avg_Spend']\n",
+    "\n",
+    "    p_val = stats.ttest_ind(var1, control)\n",
+    "    p_val_2 = stats.ttest_ind(var2, control)\n",
+    "    p_val_3 = stats.ttest_ind(var1, var2)\n",
+    "    print(p_val)\n",
+    "    print(p_val_2)\n",
+    "    print(p_val_3)\n",
+    "    \n",
+    "step 5: Now that we know the discount worked well in improving spend, let's see which variant worked better.\n",
+    "    results.groupby('Variant')[['Post_Test_Avg_Play_Time']].mean()\n",
+    "        "
    ]
   }
  ],
