--- a/summary.ipynb
+++ b/summary.ipynb
@@ -101,9 +101,15 @@
     "df_merged.median()\n",
     "df_merged.groupby('columns')['column2'].aggregate(['mean', 'median'])\n",
     "\n",
-    "\n",
+    "# 分成BINS, from continours to categorical\n",
     "df['col'] = pd.cut(df['col'], bins=[0, 5, 10, 15])\n",
     "\n",
+    "# extracgting hours from a datatime variable\n",
+    "\n",
+    "\n",
+    "#scaling/standardizing data ( range 0-1)\n",
+    "\n",
+    "# infering new data points\n",
     "\n",
     "\n"
    ]
