--- a/summary.ipynb
+++ b/summary.ipynb
@@ -6,8 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pip install\n",
     "pip install scikit-learn\n",
     "pip install numpy\n",
+    "pip install statsmodels\n",
+    "pip install dmba\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -16,7 +20,25 @@
     "import math\n",
     "from scipy.stats import spearmanr\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler\n"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge, LassoCV, BayesianRidge\n",
+    "import statsmodels.formula.api as sm\n",
+    "import matplotlib.pylab as plt\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import dmba\n",
+    "from dmba import regressionSummary, exhaustive_search\n",
+    "from dmba import backward_elimination, forward_selection, stepwise_selection\n",
+    "from dmba import adjusted_r2_score, AIC_score, BIC_score\n"
    ]
   },
   {
@@ -94,6 +116,7 @@
     "df.groupby('col1')['col2'].mean()\n",
     "df.groupby('column1')[['column2', 'column3']].aggregate(['mean', 'median', 'max'])\n",
     "\n",
+    "df = pd.DataFrame()\n",
     "\n",
     "    # merge two df\n",
     "df2.set_index('customer_id', inplace=True)\n",
@@ -105,10 +128,12 @@
     "df['col'] = pd.cut(df['col'], bins=[0, 5, 10, 15])\n",
     "\n",
     "# extracgting hours from a datatime variable\n",
-    "\n",
+    "bikes['datetime'] = pd.to_datetime(bikes['datetime'])\n",
+    "bikes['hour'] = bikes['datetime'].dt.hour\n",
     "\n",
     "#scaling/standardizing data ( range 0-1)\n",
-    "\n",
+    "scaler = StandardScaler() # Z-score 标准化， 将特征值转换为0-1的分布，消除偏差\n",
+    "df_std = scaler.fit_transform(df) #对df的数据 进行标\n",
     "# infering new data points\n",
     "\n",
     "\n"
@@ -281,6 +306,107 @@
     "step 5: Now that we know the discount worked well in improving spend, let's see which variant worked better.\n",
     "    results.groupby('Variant')[['Post_Test_Avg_Play_Time']].mean()\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature engineering\n",
+    "\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# standardize the feature 缩放器\n",
+    "scaler = StandardScaler() # Z-score 标准化， 将特征值转换为0-1的分布，消除偏差\n",
+    "df_std = scaler.fit_transform(df) #对df的数据 进行标准化处理\n",
+    "       #  or scaler.fit(df)\n",
+    "# Perform PCA\n",
+    "pca = PCA() #    n_components默认为none, 表示保留所有的主成分\n",
+    "df_pca = pca.fit_transform(df_std) # 转换后的数据与原始数据相同的维度\n",
+    "\n",
+    "\n",
+    "# The transformed data is an array, convert it back to a dataframe\n",
+    "df_pca = pd.DataFrame(df_pca, columns=[f'PC{i+1}' for i in range(len(df.columns))])\n",
+    "\n",
+    "# Print the explained variance ratio\n",
+    "print('Explained variance: ', pca.explained_variance_ratio_)\n",
+    "\n",
+    "# print the cumulative explained variance ratio\n",
+    "cumsum_variance = np.cumsum(pca.explained_variance_ratio_)\n",
+    "print('Cumulative explained variance ratio: ', cumsum_variance)\n",
+    "\n",
+    "#show the first few rows of transfomed dataframe\n",
+    "df_pca.head()\n",
+    "\n",
+    "\n",
+    "# let's do the same, but now reduce to 2 components \n",
+    "# perform PCA\n",
+    "pca = PCA(n_components=2)\n",
+    "df_pca = pca.fit_transform(df_std)\n",
+    "\n",
+    "# The transormed data is an array, convert it back into a dataframe \n",
+    "df_pca = pd.DataFrame(df_pca)\n",
+    "\n",
+    "# Print the explained variance ration\n",
+    "print('Explained variance ratio: ', pca.explained_variance_ratio_)\n",
+    "\n",
+    "# Print the cumulative explained variance ratio \n",
+    "cumsum_variance = np.cumsum(pca.explained_variance_ratio_)\n",
+    "print('Cumulative explained variance ratio: ', cumsum_variance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# feature engineering -- convert dummie variables\n",
+    "\n",
+    "\n",
+    "# Transform datetime to a datetime data format\n",
+    "df2['datetime'] = pd.to_datetime(df2['datetime'])\n",
+    "df2['hour'] = df2['datetime'].dt.hour\n",
+    "df2['month'] = df2['datetime'].dt.month\n",
+    "df2['day'] = df2['datetime'].dt.day\n",
+    "\n",
+    "# create funciton to classify amounts \n",
+    "def total_cat(x):\n",
+    "    if x >= 0 and x < 10:\n",
+    "        return '0-10'\n",
+    "    elif x >= 50 and x <100:\n",
+    "        return '50-100'\n",
+    "    else:\n",
+    "        return '100'\n",
+    "    \n",
+    "# create new column with rental count range using total_cat()function\n",
+    "df2['rental_total_group'] = df2['count'].apply(total_cat)\n",
+    "\n",
+    "# create function with 2 inputs -temp and humidity to classify \n",
+    "def good_bad(temp,hum):\n",
+    "    if temp > 24 and hum >70:\n",
+    "        return 'too hot'\n",
+    "    elif temp <=25 and hum >=50 and hum <=70:\n",
+    "        return 'so so day'\n",
+    "    else:\n",
+    "        return 'good day'\n",
+    "    \n",
+    "# apply function\n",
+    "df2['day_type'] = df2.apply(lambda x: good_bad(x['temp'], x['humidity']), axis=1)\n",
+    "\n",
+    "# Dummy variables -convert season to dummies\n",
+    "# first, rename season\n",
+    "season_mapping ={1:'winter', 2:'spring', 3:'summer', 4:'fall'}\n",
+    "df2['season'] = df2['season'].map(season_mapping)\n",
+    "\n",
+    "# Create season dummies\n",
+    "season_dummies = pd.get_dummies(df2['season'])\n",
+    "season_dummies.head()\n",
+    "\n",
+    "df2 = pd.concat([df2,season_dummies], axis =1)"
    ]
   }
  ],
