--- a/summary.ipynb
+++ b/summary.ipynb
@@ -21,10 +21,12 @@
     "from scipy.stats import spearmanr\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
+    "from statsmodels.api import qqplot\n",
+    "from statsmodels.formula.api import ols  #linear regression\n",
+    "from statsmodels.formula.api import logit   #logistic regression\n",
+    "from statsmodels.graphics.mosaicplot import mosaic # plot confusion matrix\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
@@ -150,6 +152,9 @@
     "np.median(data)\n",
     "np.max(data)\n",
     "np.min(data)\n",
+    "np.sqrt()\n",
+    "np.arrange(0,21)\n",
+    " \n",
     "stats.mode(data)[0][0]\n",
     "\n",
     "# Measure of Dispersion\n",
@@ -195,19 +200,25 @@
    "source": [
     "# PLOTS\n",
     "\n",
-    "sns.histplot(df['col'])\n",
-    "sns.scatterplot\n",
-    "sns.regplot()\n",
+    "fig = plt.figure()  # create a new figure, including multiple plots in one figure\n",
+    "sns.histplot(df['col']) \n",
+    "sns.scatterplot()   # two numerical variables\n",
+    "sns.regplot()   \n",
+    "sns.lineplot()\n",
     "sns.lmplot（ x,y, hue）  #加上分类和颜色时\n",
     "sns.boxenplot\n",
+    "df.plot(kind=bar)   #categorical variable vs numerical variable. \n",
     "df.hist(figsize=(12, 10)) # we can quickly create all histograms at once \n",
     "corr_matrix = titanic.corr()\n",
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm')   #heatmap\n",
-    "\n",
+    "plt.axline(xy1=(150,150), slope=1, linewidth=2, color ='green') #father_son data\n",
+    "plt.axline(y=1, linestyle='dotted')\n",
+    "sns.residplot()     #plot residual\n",
     "plt.title()\n",
     "plt.ylabel\n",
     "plt.xlabel\n",
-    "figsize(12,10)\n"
+    "figsize(12,10)\n",
+    "plt.axis('equal')\n"
    ]
   },
   {
@@ -407,6 +418,117 @@
     "season_dummies.head()\n",
     "\n",
     "df2 = pd.concat([df2,season_dummies], axis =1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear Regression \n",
+    "    Run a model\n",
+    "    fit the model\n",
+    "    visualize the model\n",
+    "    measurment / performance\n",
+    "    outlier/leverage/influence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.formula.api import ols \n",
+    "model = ols('y~x', data=df)\n",
+    "price = ols('y!x', data=df).fit()\n",
+    "coeffs = model.params   # get the coefficients \n",
+    "\n",
+    "intercept = model.params[0] # get the intercept\n",
+    "slope = model.params[1] # get the sloep\n",
+    "model.summary() # get OLS report\n",
+    "\n",
+    "rse = np.sqrt(mse)\n",
+    "mse = model.mse_resid            #squared residual(squared standard error)\n",
+    "rse = coeff_determination = df['x'].corr(df['y']) # R_square of X and Y\n",
+    "rse = coeff_determination = model.rsquared    #R_square\n",
+    "\n",
+    "summary = model.get_influence().summary_frame() # leverage, influence & other metrics\n",
+    "#leverage: how extreme the data point is, the bigger, the more extreme\n",
+    "#influence based on the size of the residuals and leverage\n",
+    "\n",
+    "\n",
+    "\n",
+    "#create explanatory_data\n",
+    "explanatory_data=pd.DataFrame({'n_convenience': np.arrange(0,11)})\n",
+    "#use model to predict with explanatory_data\n",
+    "price = model.predict(explanatory_data)\n",
+    "# fitted value, prediciton on the original dataset\n",
+    "model.fittedvalues\n",
+    "\n",
+    "# create 'prediction_data' column\n",
+    "prediction_data = explanatory_data.assign(price = model.predict(explanatory_data))\n",
+    "\n",
+    "# visualize\n",
+    "fig = plt.figure()\n",
+    "sns.regplot(x='a', y='b', data=df, ci=None)\n",
+    "sns.scatterplot(x='a', y='b', data=predication_data, color='red', marker='s')\n",
+    "plt.show() \n",
+    "plt.axline(xy1=(150,150), slope=1, linewidth =2, color='green') # father-son data\n",
+    "\n",
+    "sns.residplot() #residual plot\n",
+    "qqplot(data=model.resid, fit=True, line='45') # compare the data quantiles to a normal distribution\n",
+    "\n",
+    "\n",
+    "# \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Transformation\n",
+    "- Square roots: when the data has a right skewed distribution, 低点太紧凑"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.formula.api import logit\n",
+    "from statsmodels.graphics.mosaicplot import mosaic\n",
+    "\n",
+    "model = logit('y~x', data=df).fit()\n",
+    "model.params # get two coefficients, intercept and slope\n",
+    "\n",
+    "#visualizing\n",
+    "sns.regplot(x='a', y='b', data=df,ci=None, logistic=True)\n",
+    "plt.axline(xy1(0,intercept), slope=slope, color='red')\n",
+    "\n",
+    "#probability, mostlikely outcome, oddsratio, log oddsratio\n",
+    "# get the most likely outcome 0 or 1\n",
+    "prediction_data['most_likely_outcome'] = np.round(prediction_data['has_churned'])\n",
+    "odds_ratio = probability/1-probability\n",
+    "prediction_data['log_odds_ratio'] = np.log(prediction_dta['odds_ratio'])\n",
+    "\n",
+    "#measurement\n",
+    "conf_matrix = model.pred_table()\n",
+    "mosaic(conf_matrix) # plot confusion matrix\n",
+    "\n",
+    "#accuracy: the % of the correct predictions\n",
+    "# sensitivity: the % of the true positive , higher is better \n",
+    "# specificity: the % of true negative, higher is better\n"
    ]
   }
  ],
