--- a/summary.ipynb
+++ b/summary.ipynb
@@ -205,8 +205,8 @@
     "sns.scatterplot()   # two numerical variables\n",
     "sns.regplot()   \n",
     "sns.lineplot()\n",
-    "sns.lmplot（ x,y, hue）  #加上分类和颜色时\n",
-    "sns.boxenplot\n",
+    "sns.lmplot（ x,y, hue）  #加上分类和颜色时  #hue for categories \n",
+    "sns.boxenplot(  showmeans=True)   # categorical \n",
     "df.plot(kind=bar)   #categorical variable vs numerical variable. \n",
     "df.hist(figsize=(12, 10)) # we can quickly create all histograms at once \n",
     "corr_matrix = titanic.corr()\n",
@@ -426,11 +426,20 @@
    "metadata": {},
    "source": [
     "Linear Regression \n",
+    "   \n",
     "    Run a model\n",
     "    fit the model\n",
     "    visualize the model\n",
     "    measurment / performance\n",
     "    outlier/leverage/influence"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple linear Regression"
    ]
   },
   {
@@ -481,6 +490,60 @@
     "\n",
     "\n",
     "# \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parallel slope linear regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create series P as all combination of values of two variables. \n",
+    "p= product(n_convenience, house_age_years) \n",
+    "\n",
+    "# transofrm p to a DataFrame and name the columns\n",
+    "explanatory_data = pd.DataFrame(p, columns= ['n_convenience', 'house_age_years'])\n",
+    "\n",
+    "#add prediciton column to the DataFrame\n",
+    "prediction_data = explanatory_data.assign(price = model.predict(explanatory_data))\n",
+    "\n",
+    "# \n",
+    "coeffs = model.params\n",
+    "ic_0_15 = coeffs[0]\n",
+    "ic_15_30 = coeffs[1]\n",
+    "ic_30_45 = coeffs[2]\n",
+    "\n",
+    "plt.axline(xy1=(0,ic_0_15), slope=slope, color ='green')\n",
+    "plt.axline(xy1=(0,ic_15_30), slope=slope, color ='red')\n",
+    "plt.axline(xy1=(0,ic_30_45), slope=slope, color ='blue')\n",
+    "\n",
+    "sns.scatterplot(x='n_convenience', y='price', hue='house_age_years', data=df)\n",
+    "#add the prediction in black\n",
+    "sns.scatterplot(x='n_convenience', y='price', color='black', data=prediction_data)\n",
+    "\n",
+    "#mannually predict\n",
+    "# conditions, choices, np.select , then create prediciton_data\n",
+    "conditions \n",
+    "choices\n",
+    "intercept = np.select(conditions, choices)\n",
+    "#create prediciton data with columns intercept and price\n",
+    "prediction_data = explanatory_data.assign(intercept=intercept, price = intercept + slope * explanatory_data['n_convenience'])\n",
+    "\n",
+    "\n",
+    "# measurement\n",
+    "\n",
+    "model.rsquared # larger the better #r_squared = coefficient of determination \n",
+    "model.rsqared_adj   #adjusted_r_square\n",
+    "model.mse_resid # MSE\n",
+    "np.sqrt(model.mse_resid) #RSE = residual standard error #smaller is better\n"
    ]
   },
   {
