--- a/linear_regression_inclas_note.ipynb
+++ b/linear_regression_inclas_note.ipynb
@@ -1096,14 +1096,52 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "MEASUREMENT METRIX---check ski-learn website. \n",
+    "MSE + RESIDUAL for all regression models\n",
+    "Classification\n",
+    "- cofusion matrix, \n",
+    "- Mean absolute error\n",
+    "- mean squared error\n",
+    "- mean absolute %\n",
+    "\n",
+    "cluster models matrix "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "elastic_net_pred =pd.concat([pd.DataFrame(elastincnet_pred).rename(columns={0:'pred')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_test.reset_index().drop('index', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(X_test['temp'].elastic_net_pred['res'])"
+   ]
   }
  ],
  "metadata": {
