--- a/Regression_in_python_data_campt.ipynb
+++ b/Regression_in_python_data_campt.ipynb
@@ -24,6 +24,8 @@
     "explanatory_data=pd.DataFrame({'n_convenience': np.arrange(0,11)})\n",
     "#use model to predict with explanatory_data\n",
     "price = model.predict(explanatory_data)\n",
+    "# fitted value, prediciton on the original dataset\n",
+    "model.fittedvalues\n",
     "\n",
     "# create 'prediction_data' column\n",
     "prediction_data = explanatory_data.assign(price = model.predict(explanatory_data))\n",
@@ -31,16 +33,23 @@
     "# visualize\n",
     "fig = plt.figure()\n",
     "sns.regplot(x='a', y='b', data=df, ci=None)\n",
-    "sns.scatterplot(x='a', y='b', data=predication_data, color='red', shape=S)\n",
+    "sns.scatterplot(x='a', y='b', data=predication_data, color='red', marker='s')\n",
     "plt.show() \n",
     "\n",
+    "plt.axline(xy1=(150,150), slope=1, linewidth =2, color='green') # father-son data\n",
     "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
