--- a/feature_engineering_practice.ipynb
+++ b/feature_engineering_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -24,18 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +155,7 @@
        "4  20.945017   49           67.864721  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +177,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,71 +197,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_std' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[64], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39m# Perform PCA\u001b[39;00m\n\u001b[0;32m      7\u001b[0m pca \u001b[39m=\u001b[39m PCA()\n\u001b[1;32m----> 8\u001b[0m df_pca \u001b[39m=\u001b[39m pca\u001b[39m.\u001b[39mfit_transform(df_std)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_std' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained variance:  [0.28857346 0.18072185 0.14675488 0.14381463 0.13558216 0.10353415\n",
+      " 0.00101888]\n",
+      "Cumulative explained variance ratio:  [0.28857346 0.46929531 0.61605019 0.75986482 0.89544697 0.99898112\n",
+      " 1.        ]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "      <th>PC4</th>\n",
+       "      <th>PC5</th>\n",
+       "      <th>PC6</th>\n",
+       "      <th>PC7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.395268</td>\n",
+       "      <td>-1.182948</td>\n",
+       "      <td>1.791319</td>\n",
+       "      <td>2.336967</td>\n",
+       "      <td>0.037477</td>\n",
+       "      <td>0.366259</td>\n",
+       "      <td>-0.018202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.819082</td>\n",
+       "      <td>-0.205962</td>\n",
+       "      <td>2.084828</td>\n",
+       "      <td>0.028116</td>\n",
+       "      <td>-0.058311</td>\n",
+       "      <td>0.446441</td>\n",
+       "      <td>-0.061576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.171866</td>\n",
+       "      <td>-0.469183</td>\n",
+       "      <td>-0.324207</td>\n",
+       "      <td>1.639464</td>\n",
+       "      <td>-0.240676</td>\n",
+       "      <td>-0.935364</td>\n",
+       "      <td>0.040073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.106793</td>\n",
+       "      <td>0.798769</td>\n",
+       "      <td>2.060352</td>\n",
+       "      <td>0.535101</td>\n",
+       "      <td>1.421538</td>\n",
+       "      <td>0.537776</td>\n",
+       "      <td>0.082936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.772500</td>\n",
+       "      <td>1.500282</td>\n",
+       "      <td>0.797973</td>\n",
+       "      <td>0.753864</td>\n",
+       "      <td>1.115887</td>\n",
+       "      <td>-0.730499</td>\n",
+       "      <td>0.036682</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        PC1       PC2       PC3       PC4       PC5       PC6       PC7\n",
+       "0 -0.395268 -1.182948  1.791319  2.336967  0.037477  0.366259 -0.018202\n",
+       "1  0.819082 -0.205962  2.084828  0.028116 -0.058311  0.446441 -0.061576\n",
+       "2 -1.171866 -0.469183 -0.324207  1.639464 -0.240676 -0.935364  0.040073\n",
+       "3 -1.106793  0.798769  2.060352  0.535101  1.421538  0.537776  0.082936\n",
+       "4 -0.772500  1.500282  0.797973  0.753864  1.115887 -0.730499  0.036682"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Standardize the feature\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "scaler = StandardScaler()\n",
-    "dt_std = scaler.fit_transform(df)\n",
-    "\n",
+    "# standardize the feature 缩放器\n",
+    "scaler = StandardScaler() # Z-score 标准化， 将特征值转换为0-1的分布，消除偏差\n",
+    "df_std = scaler.fit_transform(df) #对df的数据 进行标准化处理\n",
+    "       #  or scaler.fit(df)\n",
     "# Perform PCA\n",
-    "pca = PCA()\n",
-    "df_pca = pca.fit_transform(df_std)\n",
+    "pca = PCA() #    n_components默认为none, 表示保留所有的主成分\n",
+    "df_pca = pca.fit_transform(df_std) # 转换后的数据与原始数据相同的维度\n",
+    "\n",
+    "\n",
+    "# The transformed data is an array, convert it back to a dataframe\n",
+    "df_pca = pd.DataFrame(df_pca, columns=[f'PC{i+1}' for i in range(len(df.columns))])\n",
+    "\n",
+    "# Print the explained variance ratio\n",
+    "print('Explained variance: ', pca.explained_variance_ratio_)\n",
+    "\n",
+    "# print the cumulative explained variance ratio\n",
+    "cumsum_variance = np.cumsum(pca.explained_variance_ratio_)\n",
+    "print('Cumulative explained variance ratio: ', cumsum_variance)\n",
+    "\n",
+    "#show the first few rows of transfomed dataframe\n",
+    "df_pca.head()\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_pca' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[57], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_pca \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(df_pca, columns\u001b[39m=\u001b[39m[\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mPC\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(df\u001b[39m.\u001b[39mcolumns))])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_pca' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained variance ratio:  [0.28857346 0.18072185]\n",
+      "Cumulative explained variance ratio:  [0.28857346 0.46929531]\n"
      ]
     }
    ],
    "source": [
-    "df_pca = pd.DataFrame(df_pca, columns=[f'PC{i+1}' for i in range(len(df.columns))])"
+    "# let's do the same, but now reduce to 2 components \n",
+    "# perform PCA\n",
+    "pca = PCA(n_components=2)\n",
+    "df_pca = pca.fit_transform(df_std)\n",
+    "\n",
+    "# The transormed data is an array, convert it back into a dataframe \n",
+    "df_pca = pd.DataFrame(df_pca)\n",
+    "\n",
+    "# Print the explained variance ration\n",
+    "print('Explained variance ratio: ', pca.explained_variance_ratio_)\n",
+    "\n",
+    "# Print the cumulative explained variance ratio \n",
+    "cumsum_variance = np.cumsum(pca.explained_variance_ratio_)\n",
+    "print('Cumulative explained variance ratio: ', cumsum_variance)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we can see that with 2 components, only 46% of the variability in data is explained. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_csv(r\"C:\\MY FILE\\MBAN 6110S-Data Science\\bikes_sharing.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (1276206763.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[56], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    df_pca = pd.DataFrame(df_pca, columns=[f'PC{I+1}' FOR i in range(len(df.columns))])\u001b[0m\n\u001b[1;37m                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10886 entries, 0 to 10885\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   datetime    10886 non-null  object \n",
+      " 1   season      10886 non-null  int64  \n",
+      " 2   holiday     10886 non-null  int64  \n",
+      " 3   workingday  10886 non-null  int64  \n",
+      " 4   weather     10886 non-null  int64  \n",
+      " 5   temp        10886 non-null  float64\n",
+      " 6   atemp       10886 non-null  float64\n",
+      " 7   humidity    10886 non-null  int64  \n",
+      " 8   windspeed   10886 non-null  float64\n",
+      " 9   casual      10886 non-null  int64  \n",
+      " 10  registered  10886 non-null  int64  \n",
+      " 11  count       10886 non-null  int64  \n",
+      "dtypes: float64(3), int64(8), object(1)\n",
+      "memory usage: 1020.7+ KB\n"
      ]
     }
    ],
    "source": [
-    "# The transformed data is an array, convert it back into a dataframe\n",
-    "df_pca = pd.DataFrame(df_pca, columns=[f'PC{I+1}' FOR i in range(len(df.columns))])"
+    "df2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform datetime to a datetime data format\n",
+    "df2['datetime'] = pd.to_datetime(df2['datetime'])\n",
+    "df2['hour'] = df2['datetime'].dt.hour\n",
+    "df2['month'] = df2['datetime'].dt.month\n",
+    "df2['day'] = df2['datetime'].dt.day\n",
+    "\n",
+    "# create funciton to classify amounts \n",
+    "def total_cat(x):\n",
+    "    if x >= 0 and x < 10:\n",
+    "        return '0-10'\n",
+    "    elif x >= 50 and x <100:\n",
+    "        return '50-100'\n",
+    "    else:\n",
+    "        return '100'\n",
+    "    \n",
+    "# create new column with rental count range using total_cat()function\n",
+    "df2['rental_total_group'] = df2['count'].apply(total_cat)\n",
+    "\n",
+    "# create function with 2 inputs -temp and humidity to classify \n",
+    "def good_bad(temp,hum):\n",
+    "    if temp > 24 and hum >70:\n",
+    "        return 'too hot'\n",
+    "    elif temp <=25 and hum >=50 and hum <=70:\n",
+    "        return 'so so day'\n",
+    "    else:\n",
+    "        return 'good day'\n",
+    "    \n",
+    "# apply function\n",
+    "df2['day_type'] = df2.apply(lambda x: good_bad(x['temp'], x['humidity']), axis=1)\n",
+    "\n",
+    "# Dummy variables -convert season to dummies\n",
+    "# first, rename season\n",
+    "season_mapping ={1:'winter', 2:'spring', 3:'summer', 4:'fall'}\n",
+    "df2['season'] = df2['season'].map(season_mapping)\n",
+    "\n",
+    "# Create season dummies\n",
+    "season_dummies = pd.get_dummies(df2['season'])\n",
+    "season_dummies.head()\n",
+    "\n",
+    "df2 = pd.concat([df2,season_dummies], axis =1)\n"
    ]
   },
   {
