--- a/linear_regression_inclas_note.ipynb
+++ b/linear_regression_inclas_note.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[57], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\u001b[39m.\u001b[39mlog  \u001b[39m# influencer\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m# good model have less influencrial points\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39m# how to make a model b\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\u001b[39m.\u001b[39mlog  \u001b[39m# influencer\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m# good model have less influencrial points\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39m# how to make a model b\u001b[39;00m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
@@ -250,24 +250,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dummies_season \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mget_dummies(bikes\u001b[39m.\u001b[39mseason, dtype\u001b[39m=\u001b[39m\u001b[39mint\u001b[39m)\n\u001b[0;32m      2\u001b[0m dummies_season\u001b[39m.\u001b[39mrename(columns \u001b[39m=\u001b[39m {\u001b[39m1\u001b[39m:\u001b[39m'\u001b[39m\u001b[39mwin\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m2\u001b[39m:\u001b[39m'\u001b[39m\u001b[39mspr\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m3\u001b[39m:\u001b[39m'\u001b[39m\u001b[39msum\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m4\u001b[39m:\u001b[39m'\u001b[39m\u001b[39mfal\u001b[39m\u001b[39m'\u001b[39m}, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m      3\u001b[0m bikes_2 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([bikes, dummies_season], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dummies_season = pd.get_dummies(bikes.season, dtype=int)\n",
-    "dummies_season.rename(columns = {1:'win', 2:'spr', 3:'sum', 4:'fal'}, inplace=True)"
+    "dummies_season.rename(columns = {1:'win', 2:'spr', 3:'sum', 4:'fal'}, inplace=True)\n",
+    "bikes_2 = pd.concat([bikes, dummies_season], axis=1)\n",
+    "bikes_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "bikes_2 = pd.concat([bikes, dummies_season], axis=1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -572,9 +584,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "bikes_2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -831,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
