--- a/summary.ipynb
+++ b/summary.ipynb
@@ -75,6 +75,10 @@
     "df.isna().count()\n",
     "df.isnull.sum()\n",
     "\n",
+    "# check missing values by columns\n",
+    "missing_value_counts = merged.isna().sum()\n",
+    "print(missing_value_counts)\n",
+    "\n",
     "\n",
     "\n",
     "df['date'] = pd.to_datetime['date']  convert the datatype\n",
@@ -204,9 +208,13 @@
     "sns.histplot(df['col']) \n",
     "sns.scatterplot()   # two numerical variables\n",
     "sns.regplot()   \n",
+    "sns.resiplot() # residual plot\n",
     "sns.lineplot()\n",
-    "sns.lmplot（ x,y, hue）  #加上分类和颜色时  #hue for categories \n",
+    "sns.countplot() # 创建一个条形图， 每个条形图对应数据库中的一个类别('cat''dog','rabbit')\n",
+    "\n",
+    "sns.lmplot（ x,y, hue）  #加上分类和颜色时  #hue for categories  # for linear regression plto\n",
     "sns.boxenplot(  showmeans=True)   # categorical \n",
+    "sns.boxplot(x=df['airline'],y=df['price'],palette='hls')  # mutictegories on X-axis. \n",
     "df.plot(kind=bar)   #categorical variable vs numerical variable. \n",
     "df.hist(figsize=(12, 10)) # we can quickly create all histograms at once \n",
     "corr_matrix = titanic.corr()\n",
